--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "file-loader": "^0.11.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
   },
